--- a/extend/popup/popup.html
+++ b/extend/popup/popup.html
@@ -14,7 +14,8 @@
 				<input id="repeat" type="tel" placeholder="repeat count" value=""/>
 				<button id="btnCreateTab" class="btn">Go</button>
 			</div>
-			<div class="tip">Add a command "--auto-open-devtools-for-tabs" to shortcut to open devtools automatically.</div>
+			<div class="tip">Add a command "--auto-open-devtools-for-tabs" to shortcut to open devtools automatically.
+			</div>
 		</div>
 	</body>
 </html>
